--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
 <meta charset="UTF-8">
-<title>Fusée Infinity</title>
+<title>Fusée de l'Infini</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 <style>
@@ -68,15 +68,9 @@ button{background:#2196f3;color:white;cursor:pointer}
     width:60px;
     height:80px;
 }
-.rocket img{
-    width:100%;
-    height:100%;
-}
+.rocket img{width:100%;height:100%}
 
-.rock{
-    position:absolute;
-    pointer-events:none;
-}
+.rock{position:absolute;pointer-events:none}
 
 #score{position:absolute;top:10px;left:10px;font-size:22px}
 
@@ -166,6 +160,18 @@ let scoreInterval = null;
 let rockIntervals = [];
 let stars = [];
 
+/* HITBOX RÉDUITE */
+function getHitbox(el, px, py) {
+    const r = el.getBoundingClientRect();
+    return {
+        left: r.left + px,
+        right: r.right - px,
+        top: r.top + py,
+        bottom: r.bottom - py
+    };
+}
+
+/* Fusée et rochers */
 const rocketSize = { width: 60, height: 80 };
 const rockImages = [
     { src: "Roche1.png", width: 50, height: 50 },
@@ -174,17 +180,6 @@ const rockImages = [
     { src: "Roche4.png", width: 50, height: 60 },
     { src: "Roche5.png", width: 65, height: 50 },
 ];
-
-/* HITBOX REDUITE */
-function getHitbox(el, padX, padY) {
-    const r = el.getBoundingClientRect();
-    return {
-        left: r.left + padX,
-        right: r.right - padX,
-        top: r.top + padY,
-        bottom: r.bottom - padY
-    };
-}
 
 /* ÉTOILES */
 function spawnStars() {
@@ -209,13 +204,30 @@ function moveStars() {
     if (!gameOver) requestAnimationFrame(moveStars);
 }
 
-/* SCORE */
+/* SCORE ET SEUILS */
 function loopScore() {
     clearInterval(scoreInterval);
     scoreInterval = setInterval(() => {
         if (gameOver) return;
+
         score += pointMultiplier;
         scoreTxt.textContent = "Score : " + score;
+
+        let thresholds = [100, 250, 500, 1000];
+        if (score >= 1500) {
+            let extra = Math.floor((score - 1500) / 500);
+            for (let i = 0; i <= extra; i++) thresholds.push(1500 + i * 500);
+        }
+
+        thresholds.forEach(t => {
+            if (score >= t && !activatedThresholds.has(t)) {
+                activatedThresholds.add(t);
+                speedMultiplier *= 2;
+                pointMultiplier *= 2;
+                speed = baseSpeed * speedMultiplier;
+                spawnDelay = Math.max(120, 800 / speedMultiplier);
+            }
+        });
     }, 250);
 }
 
@@ -238,25 +250,45 @@ document.addEventListener("keyup", e => {
     if (e.key === "ArrowRight") rightPressed = false;
 });
 
+/* MOBILE */
+const leftBtn = document.getElementById("leftBtn");
+const rightBtn = document.getElementById("rightBtn");
+["touchstart", "mousedown"].forEach(ev => {
+    leftBtn.addEventListener(ev, e => { e.preventDefault(); leftPressed = true; });
+    rightBtn.addEventListener(ev, e => { e.preventDefault(); rightPressed = true; });
+});
+["touchend", "mouseup", "mouseleave"].forEach(ev => {
+    leftBtn.addEventListener(ev, () => leftPressed = false);
+    rightBtn.addEventListener(ev, () => rightPressed = false);
+});
+
 /* JEU */
 function play() {
     score = 0;
+    speedMultiplier = 1;
+    pointMultiplier = 1;
+    speed = baseSpeed;
+    spawnDelay = 800;
+    activatedThresholds = new Set();
     gameOver = false;
     x = innerWidth / 2 - rocketSize.width/2;
     rocket.style.left = x + "px";
     scoreTxt.textContent = "Score : 0";
     gameover.style.display = "none";
+
     document.querySelectorAll(".rock").forEach(r => r.remove());
-    rockIntervals.forEach(i => clearInterval(i));
+    rockIntervals.forEach(int => clearInterval(int));
     rockIntervals = [];
+
     spawnStars();
     moveStars();
+
     switchScreen(game);
     loopScore();
     spawnRock();
 }
 
-/* ROCHERS */
+/* ROCKS */
 function spawnRock() {
     if (gameOver) return;
 
@@ -274,8 +306,8 @@ function spawnRock() {
         if (gameOver) { r.remove(); clearInterval(fall); return; }
         r.style.top = parseInt(r.style.top) + speed + "px";
 
-        let rockBox = getHitbox(r, 8, 8);
-        let rocketBox = getHitbox(rocket, 14, 12);
+        const rockBox = getHitbox(r, 8, 8);
+        const rocketBox = getHitbox(rocket, 14, 12);
 
         if (
             rockBox.bottom > rocketBox.top &&
@@ -301,23 +333,47 @@ function spawnRock() {
 function endGame() {
     gameOver = true;
     clearInterval(scoreInterval);
+    rockIntervals.forEach(int => clearInterval(int));
+    rockIntervals = [];
+
     finalScore.textContent = "Score : " + score;
+
+    let best = localStorage.getItem("bestScore") || 0;
+    if (score > best) localStorage.setItem("bestScore", score);
+    let data = JSON.parse(localStorage.getItem("leaderboard") || "[]");
+    data.push({ name: pseudoInput.value || "Anonyme", score });
+    data.sort((a, b) => b.score - a.score);
+    localStorage.setItem("leaderboard", JSON.stringify(data.slice(0, 10)));
+
     gameover.style.display = "flex";
     updateBest();
 }
 
 /* CLASSEMENT */
 function showLeaderboard() {
+    list.innerHTML = "";
+    let data = JSON.parse(localStorage.getItem("leaderboard") || "[]");
+    for (let i = 0; i < 10; i++) {
+        let d = document.createElement("div");
+        if (data[i]) {
+            let cls = i == 0 ? "gold" : i == 1 ? "silver" : i == 2 ? "bronze" : "normal";
+            let medal = i == 0 ? "🥇" : i == 1 ? "🥈" : i == 2 ? "🥉" : "#" + (i + 1);
+            d.className = "item " + cls;
+            d.innerHTML = `<span>${medal} ${data[i].name}</span><span>${data[i].score}</span>`;
+        } else {
+            d.className = "item empty";
+            d.innerHTML = `<span>#${i + 1} — Libre</span><span>—</span>`;
+        }
+        list.appendChild(d);
+    }
     switchScreen(leader);
 }
+
 function updateBest() {
     bestTxt.textContent = "Meilleur score : " + (localStorage.getItem("bestScore") || 0);
 }
 function goHome() { switchScreen(home); }
-function switchScreen(s) {
-    [home, game, leader].forEach(e => e.classList.remove("active"));
-    s.classList.add("active");
-}
+function switchScreen(s) { [home, game, leader].forEach(e => e.classList.remove("active")); s.classList.add("active"); }
 </script>
 
 </body>
