--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@ const rightBtn = document.getElementById("rightBtn");
 });
 ["touchend", "mouseup", "mouseleave"].forEach(ev => {
     leftBtn.addEventListener(ev, () => leftPressed = false);
-    rightBtn.addEventListener(ev, () => rightPressed = false;
+    rightBtn.addEventListener(ev, () => rightPressed = false);
 });
 
 function play() {
